--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,14 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
+
+    androidTestImplementation 'com.google.truth:truth:0.42'
+    androidTestImplementation 'org.mockito:mockito-android:2.21.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.annimon:stream:1.2.1'
+    implementation 'com.github.tomaszpolanski:options:1.3.0'
 }
