Added styleable attributes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
     defaultConfig {
+        applicationId "nurisezgin.com.mine"
         minSdkVersion 14
         targetSdkVersion 27
         versionCode 1
