--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,5 +3,14 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name" />
+        android:label="@string/app_name" >
+
+        <activity android:name=".sample.SampleActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+    </application>
 </manifest>
