--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,19 +1,25 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
     defaultConfig {
+        applicationId "com.sample"
         minSdkVersion 14
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    dexOptions {
+        preDexLibraries = false
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -25,13 +31,10 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     testImplementation 'junit:junit:4.12'
 
-    androidTestImplementation 'com.google.truth:truth:0.42'
-    androidTestImplementation 'org.mockito:mockito-android:2.21.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.annimon:stream:1.2.1'
-    implementation 'com.github.tomaszpolanski:options:1.3.0'
+    implementation 'com.android.support:multidex:1.0.3'
+    compile project(':app')
 }
